hand-in version

--- a/market_data_compression.ipynb
+++ b/market_data_compression.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -251,6 +251,13 @@
     "print(f\"                 vs {json_size_bytes / len(orders):.1f} bytes (JSON)\")\n",
     "print(f\"{'='*60}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -317,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +386,7 @@
      "text": [
       "Phase 1: Initialization\n",
       "   Processing first snapshot at 2025-10-22 07:00:00\n",
-      "🌱 Initializing event log from snapshot: 375,338 orders\n",
+      "Initializing event log from snapshot: 375,338 orders\n",
       "\n",
       "Initialization Results:\n",
       "   Orders in T0:        375,338\n",
@@ -417,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -475,16 +482,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Stored 376,361 events to demo_events.parquet (9.15 MB)\n",
+      "Stored 376,361 events to demo_events.parquet (9.15 MB)\n",
       "\n",
-      "📊 Compression Results (Stage 2: Snapshots → Events)\n",
+      "Compression Results (Stage 2: Snapshots → Events)\n",
       "======================================================================\n",
       "Two snapshots (T0 + T1):         17.05 MB\n",
       "Events (init + delta):             9.15 MB\n",
@@ -496,7 +503,7 @@
       "Bytes per event:                   25.5 bytes\n",
       "======================================================================\n",
       "\n",
-      "💡 Key Insight:\n",
+      "Key Insight:\n",
       "   After initialization, only 1,023 events needed\n",
       "   vs 375,320 orders in full snapshot\n",
       "   = 0.3% data to store!\n"
@@ -571,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -661,15 +668,15 @@
      "text": [
       "\n",
       "======================================================================\n",
-      "📊 COMPRESSION DEMONSTRATION SUMMARY\n",
+      "COMPRESSION DEMONSTRATION SUMMARY\n",
       "======================================================================\n",
       "\n",
-      "🔹 Stage 1: JSON → Parquet (Columnar Storage)\n",
+      "Stage 1: JSON → Parquet (Columnar Storage)\n",
       "   Raw JSON:                  120.93 MB\n",
       "   Parquet (Snappy):          9.52 MB\n",
       "   Compression:               12.7×\n",
       "\n",
-      "🔹 Stage 2: Event Sourcing (2 Snapshots)\n",
+      "Stage 2: Event Sourcing (2 Snapshots)\n",
       "   Two snapshots (T0 + T1):   17.05 MB\n",
       "   Events (init + delta):     9.15 MB\n",
       "   Compression:               1.9×\n",
@@ -678,7 +685,7 @@
       "      Initialization:         375,338 events (baseline)\n",
       "      Delta (5 min):          1,023 events (0.27% changed)\n",
       "\n",
-      "🔹 Daily Projection (288 Snapshots)\n",
+      "Daily Projection (288 Snapshots)\n",
       "   288 JSON files:            34,827 MB/day\n",
       "   288 Parquet files:         2,455 MB/day (14.2× vs JSON)\n",
       "   Event sourcing:            16 MB/day (150.9× vs Parquet)\n",
@@ -689,15 +696,15 @@
    ],
    "source": [
     "print(f\"\\n{'='*70}\")\n",
-    "print(f\"📊 COMPRESSION DEMONSTRATION SUMMARY\")\n",
+    "print(f\"COMPRESSION DEMONSTRATION SUMMARY\")\n",
     "print(f\"{'='*70}\")\n",
     "\n",
-    "print(f\"\\n🔹 Stage 1: JSON → Parquet (Columnar Storage)\")\n",
+    "print(f\"\\nStage 1: JSON → Parquet (Columnar Storage)\")\n",
     "print(f\"   Raw JSON:                  {json_size_mb:.2f} MB\")\n",
     "print(f\"   Parquet (Snappy):          {parquet_size_mb:.2f} MB\")\n",
     "print(f\"   Compression:               {compression_ratio:.1f}×\")\n",
     "\n",
-    "print(f\"\\n🔹 Stage 2: Event Sourcing (2 Snapshots)\")\n",
+    "print(f\"\\nStage 2: Event Sourcing (2 Snapshots)\")\n",
     "print(f\"   Two snapshots (T0 + T1):   {total_snapshot_size_mb:.2f} MB\")\n",
     "print(f\"   Events (init + delta):     {events_size_mb:.2f} MB\")\n",
     "print(f\"   Compression:               {snapshot_to_events_ratio:.1f}×\")\n",
@@ -706,7 +713,7 @@
     "print(f\"      Initialization:         {init_events_df.height:,} events (baseline)\")\n",
     "print(f\"      Delta (5 min):          {delta_events_df.height:,} events ({(delta_events_df.height/init_events_df.height)*100:.2f}% changed)\")\n",
     "\n",
-    "print(f\"\\n🔹 Daily Projection (288 Snapshots)\")\n",
+    "print(f\"\\nDaily Projection (288 Snapshots)\")\n",
     "daily_json_mb = json_size_mb * 288\n",
     "daily_parquet_mb = naive_daily_snapshots_mb\n",
     "daily_events_mb = daily_event_storage_mb\n",
